# frag

./: .gitignore  CMakeLists.txt  README.md  frag.go  go.mod  go.sum  scene.go  shader.go
.github/workflows/: build.yml
examples/: README.md  broken_lieuville.frag  bz_reaction.frag  bzx.frag  diffusion.frag  dots.frag  flux.frag  game_of_life.frag  gradient.frag  gradient_animation.frag  hamilton_jacobi.frag  plot.frag  reaction_stream.frag  sampling.frag  slime.frag  spinodal_decomposition.frag  two_body.frag  xor.frag
main/: main.go  parse.go  pragmas.go
src/: frag.c  frag.h  main.c  scene.c  scene.h  shader.c  shader.h  source.c  source.h
